# rad_ur10_stack

./: README.md
ur10_c2gripper/urdf/: robotiq_c2_model.urdf  ur10.urdf.xacro  ur10_gripper.urdf.xacro
ur10_gripper/: CMakeLists.txt  package.xml
ur10_gripper/src/: extractData.cpp  findPath.py  run_trials.cpp  ur10_gripper_server.cpp  ur10_heatmap.cpp  ur10_point_joints.cpp
ur10_gripper_description/: CMakeLists.txt  package.xml
ur10_gripper_description/launch/: ur10_gripper_upload.launch
ur10_gripper_description/urdf/: robotiq_c2_model.urdf  ur10.urdf.xacro  ur10_gripper.urdf.xacro
ur10_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_gripper_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur10.srdf
ur10_gripper_moveit_config/launch/: demo.launch  move_group.launch  move_group_interface_test.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  ur10_moveit_controller_manager.launch.xml
ur10_gripper_moveit_config/src/: addFrame.cpp  addTray.cpp
ur10_gripper_msgs/: CMakeLists.txt  package.xml
ur10_gripper_msgs/srv/: UR10.srv
ur_modern_driver/launch/: ur10_bringup.launch  ur10_ros_control.launch
